feat: add minimal lgpd controls
